@@ -100,12 +100,12 @@ if %? != 0 goto done
 cd -
 
 
-echo ------------------
-echo cd ..\..\contrib\build\ogl
-cd ..\..\contrib\build\ogl
-call %WXWIN%\build\msw\.mymake.btm %BUILD_TYPE% CXX="cl -DwxUSE_DEPRECATED=0" %$
-if %? != 0 goto done
-cd -
+REM echo ------------------
+REM echo cd ..\..\contrib\build\ogl
+REM cd ..\..\contrib\build\ogl
+REM call %WXWIN%\build\msw\.mymake.btm %BUILD_TYPE% CXX="cl -DwxUSE_DEPRECATED=0" %$
+REM if %? != 0 goto done
+REM cd -
 
 
 
